[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/AudioListTree.gd" type="Script" id=1]
[ext_resource path="res://scripts/AudioExplorer.gd" type="Script" id=2]

[node name="AudioExplorer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtractRow" type="HBoxContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="ExtractRow"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
text = "Extract:"

[node name="SelectedExtractButton" type="Button" parent="ExtractRow"]
margin_left = 51.0
margin_right = 118.0
margin_bottom = 20.0
text = "Selected"

[node name="AllExtractButton" type="Button" parent="ExtractRow"]
margin_left = 122.0
margin_right = 151.0
margin_bottom = 20.0
text = "All"

[node name="FilterByRow" type="HBoxContainer" parent="."]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0
size_flags_horizontal = 3
alignment = 1

[node name="filterLabel" type="Label" parent="FilterByRow"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
grow_horizontal = 0
text = "Filter by:"

[node name="filterField" type="LineEdit" parent="FilterByRow"]
margin_left = 60.0
margin_right = 975.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="filterButton" type="Button" parent="FilterByRow"]
margin_left = 979.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Filter"

[node name="AudioListTree" type="Tree" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
hide_root = true
select_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ExtractRow/SelectedExtractButton" to="." method="_on_SelectedExtractButton_pressed"]
[connection signal="pressed" from="ExtractRow/AllExtractButton" to="." method="_on_AllExtractButton_pressed"]
[connection signal="text_entered" from="FilterByRow/filterField" to="." method="_on_filterField_text_entered"]
[connection signal="button_pressed" from="AudioListTree" to="AudioListTree" method="_on_AudioListTree_button_pressed"]
